tests/src/Loader/classloader/generics/Instantiation/Negative/abstract08.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract08_abstract08_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract08_abstract08_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract08\\abstract08.cmd");
        }
    }
}
